--- a/index.html
+++ b/index.html
@@ -5,6 +5,67 @@
     <title>BierHier Hoooome Pagina</title>
 </head>
 <body>
- you a bitch
+<div id="wrapper">
+
+    <header>
+
+    </header>
+
+    <nav>
+        <a href="">Home</a>
+        <a href="">Concerten</a>
+        <a href="">Sport</a>
+        <a href="">Recepten</a>
+        <a href="">Contact</a>
+    </nav>
+
+    <section>
+        <h1>Nieuws uit Almere</h1>
+        <article>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel mollis tellus, eget
+            aliquet nunc. In ac neque lacinia, tempus velit ac, iaculis lorem. Cras dignissim
+            mauris sed turpis blandit pharetra. Aenean placerat condimentum ipsum, vel faucibus
+            metus fringilla et. Integer eros erat, ultricies sit amet mollis vel, cursus et felis.
+            Phasellus a aliquet lacus. Duis neque tortor, imperdiet viverra justo eget, fringilla
+            posuere odio. Curabitur aliquam tristique risus nec ultricies. Maecenas convallis
+            auctor ante, non finibus nunc pharetra in. Phasellus posuere dui quis sagittis
+            vulputate. Maecenas et consequat orci. Duis pellentesque justo id aliquet fermentum.
+            Sed dignissim libero vel augue semper porttitor. Mauris eget nibh ac turpis gravida
+            facilisis. Donec aliquam varius lacinia. Maecenas at bibendum metus.
+        </article>
+
+        <article>
+            Vivamus leo metus, fermentum sit amet velit id, tincidunt ullamcorper urna. Mauris
+            et libero aliquam, accumsan nulla et, iaculis lectus. Etiam tempus luctus diam, non
+            efficitur metus euismod vitae. Curabitur sed turpis eget velit laoreet sollicitudin.
+            Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
+            himenaeos. Vestibulum et metus nibh. Nulla facilisi. Maecenas scelerisque, neque nec
+            lacinia bibendum, ante neque placerat sapien, a sodales dolor tellus in lacus. Nullam
+            sed massa consequat, rutrum erat sed, dignissim nunc. Vestibulum tincidunt eget sem
+            ac tristique. Integer bibendum mollis tristique. Duis facilisis, ante eget aliquam
+            efficitur, massa lorem mattis sem, et sollicitudin tellus felis at lacus.
+        </article>
+
+        <article>
+            Proin vel condimentum odio. Ut a lacus eget augue suscipit efficitur ac at purus.
+            Morbi semper egestas venenatis. Integer aliquet luctus nulla, quis porta ligula
+            efficitur sit amet. Sed vestibulum sapien quam, sit amet volutpat nisl vulputate
+            vitae. Donec nec porta urna. Vestibulum ante ipsum primis in faucibus orci luctus
+            et ultrices posuere cubilia Curae; Curabitur luctus sem vitae justo interdum, quis
+            aliquam magna malesuada. Morbi aliquet sapien in eros blandit dictum. Sed gravida,
+            neque sed facilisis semper, ante urna cursus urna, bibendum elementum ligula magna
+            ac enim. Aliquam venenatis, purus eu eleifend fermentum, quam erat aliquam dolor,
+            in ornare risus dui at libero. Mauris arcu libero, eleifend ac dictum ac, mollis
+            ultricies neque. Nullam ultrices urna justo, vel posuere tellus elementum nec.
+            Fusce vitae scelerisque diam.
+        </article>
+    </section>
+
+</div>
+
+<footer>
+
+</footer>
+
 </body>
 </html>
