--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>BierHier Hoooome Pagina</title>
+    <link rel="stylesheet" href="Bierhier.css">
 </head>
 <body>
 <div id="wrapper">
@@ -12,16 +13,19 @@
     </header>
 
     <nav>
-        <a href="">Home</a>
-        <a href="">Concerten</a>
-        <a href="">Sport</a>
-        <a href="">Recepten</a>
-        <a href="">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="Concert.html">Concerten</a>
+        <a href="Sport.html">Sport</a>
+        <a href="De%20ReceptenPagina.html">Recepten</a>
+        <a href="Contact.html">Contact</a>
     </nav>
 
     <section>
-        <h1>Nieuws uit Almere</h1>
+        <h1 class="Stage">Stage lopen in Almere</h1>
+        <h1 class="title">Nieuws uit Almere</h1>
+
         <article>
+            <img class="article" src="src/aanrijding.jpg" alt="foto aanrijding" width="320">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel mollis tellus, eget
             aliquet nunc. In ac neque lacinia, tempus velit ac, iaculis lorem. Cras dignissim
             mauris sed turpis blandit pharetra. Aenean placerat condimentum ipsum, vel faucibus
@@ -36,8 +40,9 @@
 
         <article>
             Vivamus leo metus, fermentum sit amet velit id, tincidunt ullamcorper urna. Mauris
-            et libero aliquam, accumsan nulla et, iaculis lectus. Etiam tempus luctus diam, non
-            efficitur metus euismod vitae. Curabitur sed turpis eget velit laoreet sollicitudin.
+            et libero aliquam, accumsan nulla et, iaculis lectus. Etiam tempus luctus diam,
+            <img class="article" src="src/hennep.jpg" alt="hennepfoto" width="320">
+            non efficitur metus euismod vitae. Curabitur sed turpis eget velit laoreet sollicitudin.
             Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
             himenaeos. Vestibulum et metus nibh. Nulla facilisi. Maecenas scelerisque, neque nec
             lacinia bibendum, ante neque placerat sapien, a sodales dolor tellus in lacus. Nullam
@@ -46,7 +51,7 @@
             efficitur, massa lorem mattis sem, et sollicitudin tellus felis at lacus.
         </article>
 
-        <article>
+        <article class="laatste">
             Proin vel condimentum odio. Ut a lacus eget augue suscipit efficitur ac at purus.
             Morbi semper egestas venenatis. Integer aliquet luctus nulla, quis porta ligula
             efficitur sit amet. Sed vestibulum sapien quam, sit amet volutpat nisl vulputate
@@ -55,16 +60,21 @@
             aliquam magna malesuada. Morbi aliquet sapien in eros blandit dictum. Sed gravida,
             neque sed facilisis semper, ante urna cursus urna, bibendum elementum ligula magna
             ac enim. Aliquam venenatis, purus eu eleifend fermentum, quam erat aliquam dolor,
-            in ornare risus dui at libero. Mauris arcu libero, eleifend ac dictum ac, mollis
-            ultricies neque. Nullam ultrices urna justo, vel posuere tellus elementum nec.
-            Fusce vitae scelerisque diam.
+            <img class="article" src="src/stage.jpg" alt="hennepfoto" width="320">
         </article>
     </section>
 
 </div>
 
 <footer>
-
+    <a href="">Over ons</a>
+    <br>
+    <a href="">Produkten</a>
+    <br>
+    <a href="">Contact</a>
+    <br>
+    <br>
+    Copyright &copy; 2016
 </footer>
 
 </body>
