website klaar laatste aanpassingen gedaan

--- a/index.html
+++ b/index.html
@@ -67,14 +67,16 @@
 </div>
 
 <footer>
-    <a href="">Over ons</a>
+    <a href="">Concerten</a>
     <br>
-    <a href="">Produkten</a>
+    <a href="">Sport</a>
+    <br>
+    <a href="">Recepten</a>
     <br>
     <a href="">Contact</a>
     <br>
     <br>
-    Copyright &copy; 2016
+    Copyright &copy; ROC Flevoland 2105
 </footer>
 
 </body>
