recepten pagina gemaakt

--- a/De ReceptenPagina.html
+++ b/De ReceptenPagina.html
@@ -2,68 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Recepte</title>
+    <title>Overons</title>
+    <link rel="stylesheet" href="Bierhier.css">
 </head>
 <body>
 <div id="wrapper">
 
-    <header>
-
-    </header>
-
     <nav>
-        <a href="">Home</a>
-        <a href="">Concerten</a>
-        <a href="">Sport</a>
-        <a href="">Recepten</a>
-        <a href="">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="Concert.html">Concerten</a>
+        <a href="Sport.html">Sport</a>
+        <a href="De ReceptenPagina.html">Recepten</a>
+        <a href="Contact.html">Contact</a>
     </nav>
 
-    <section>
-        <h1>Nieuws uit Almere</h1>
-        <article>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel mollis tellus, eget
-            aliquet nunc. In ac neque lacinia, tempus velit ac, iaculis lorem. Cras dignissim
-            mauris sed turpis blandit pharetra. Aenean placerat condimentum ipsum, vel faucibus
-            metus fringilla et. Integer eros erat, ultricies sit amet mollis vel, cursus et felis.
-            Phasellus a aliquet lacus. Duis neque tortor, imperdiet viverra justo eget, fringilla
-            posuere odio. Curabitur aliquam tristique risus nec ultricies. Maecenas convallis
-            auctor ante, non finibus nunc pharetra in. Phasellus posuere dui quis sagittis
-            vulputate. Maecenas et consequat orci. Duis pellentesque justo id aliquet fermentum.
-            Sed dignissim libero vel augue semper porttitor. Mauris eget nibh ac turpis gravida
-            facilisis. Donec aliquam varius lacinia. Maecenas at bibendum metus.
-        </article>
+    <img class="gerecht" src="src/boerenkool.jpg" alt="foto boerenkool">
 
-        <article>
-            Vivamus leo metus, fermentum sit amet velit id, tincidunt ullamcorper urna. Mauris
-            et libero aliquam, accumsan nulla et, iaculis lectus. Etiam tempus luctus diam, non
-            efficitur metus euismod vitae. Curabitur sed turpis eget velit laoreet sollicitudin.
-            Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
-            himenaeos. Vestibulum et metus nibh. Nulla facilisi. Maecenas scelerisque, neque nec
-            lacinia bibendum, ante neque placerat sapien, a sodales dolor tellus in lacus. Nullam
-            sed massa consequat, rutrum erat sed, dignissim nunc. Vestibulum tincidunt eget sem
-            ac tristique. Integer bibendum mollis tristique. Duis facilisis, ante eget aliquam
-            efficitur, massa lorem mattis sem, et sollicitudin tellus felis at lacus.
+    <section class="recepten">
+        <h1>Boerenkool met worst</h1>
+        <h4>Recept</h4>
+        <article class="recepten">
+            is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
         </article>
-
-        <article>
-            Proin vel condimentum odio. Ut a lacus eget augue suscipit efficitur ac at purus.
-            Morbi semper egestas venenatis. Integer aliquet luctus nulla, quis porta ligula
-            efficitur sit amet. Sed vestibulum sapien quam, sit amet volutpat nisl vulputate
-            vitae. Donec nec porta urna. Vestibulum ante ipsum primis in faucibus orci luctus
-            et ultrices posuere cubilia Curae; Curabitur luctus sem vitae justo interdum, quis
-            aliquam magna malesuada. Morbi aliquet sapien in eros blandit dictum. Sed gravida,
-            neque sed facilisis semper, ante urna cursus urna, bibendum elementum ligula magna
-            ac enim. Aliquam venenatis, purus eu eleifend fermentum, quam erat aliquam dolor,
-            in ornare risus dui at libero. Mauris arcu libero, eleifend ac dictum ac, mollis
-            ultricies neque. Nullam ultrices urna justo, vel posuere tellus elementum nec.
-            Fusce vitae scelerisque diam.
+        <h4>ingerdiente</h4>
+        <article class="recepten">
+            is simply dummy text of the printing and typesetting industry
+        </article>
+        <h4>Bereidingswijze</h4>
+        <article class="recepten">
+            is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
         </article>
     </section>
+
+    <div class="row">
+        <div class="column">
+            <img src="src/boerenkool2.jfif" alt="Snow" width="300" height="300">
+        </div>
+        <div class="column">
+            <img src="src/boerenkool3.jfif" alt="Forest" width="300" height="300">
+        </div>
+        <div class="column">
+            <img src="src/boerenkool4.jfif" alt="Mountains" width="300" height="300">
+        </div>
+    </div>
 
 </div>
 
 <footer>
+    <a href="index.html">Home</a>
+    <br>
+    <a href="">Concerten</a>
+    <br>
+    <a href="">Sport</a>
+    <br>
+    <a href="">Recepten</a>
+    <br>
+    <a href="">Contact</a>
+    <br>
+    <br>
+    Copyright &copy; ROC Flevoland 2105
 
 </footer>
 
