recepten pagina gemaakt

--- a/Concert.html
+++ b/Concert.html
@@ -3,24 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Concert</title>
+    <link rel="stylesheet" href="Bierhier.css">
 </head>
 <body>
 <div id="wrapper">
 
-    <header>
-
-    </header>
-
     <nav>
-        <a href="">Home</a>
-        <a href="">Concerten</a>
-        <a href="">Sport</a>
-        <a href="">Recepten</a>
-        <a href="">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="Concert.html">Concerten</a>
+        <a href="Sport.html">Sport</a>
+        <a href="De ReceptenPagina.html">Recepten</a>
+        <a href="Contact.html">Contact</a>
     </nav>
 
-    <section>
-        <h1>Nieuws uit Almere</h1>
+    <section class="img">
+        <img src="src/Blof1.jfif">
+        <br>
+        <img src="src/blof2.jfif">
+    </section>
+
+    <section class="text">
         <article>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel mollis tellus, eget
             aliquet nunc. In ac neque lacinia, tempus velit ac, iaculis lorem. Cras dignissim
@@ -32,6 +34,12 @@
             vulputate. Maecenas et consequat orci. Duis pellentesque justo id aliquet fermentum.
             Sed dignissim libero vel augue semper porttitor. Mauris eget nibh ac turpis gravida
             facilisis. Donec aliquam varius lacinia. Maecenas at bibendum metus.
+            Proin vel condimentum odio. Ut a lacus eget augue suscipit efficitur ac at purus.
+            Morbi semper egestas venenatis. Integer aliquet luctus nulla, quis porta ligula
+            efficitur sit amet. Sed vestibulum sapien quam, sit amet volutpat nisl vulputate
+            vitae. Donec nec porta urna. Vestibulum ante ipsum primis in faucibus orci luctus
+            et ultrices posuere cubilia Curae; Curabitur luctus sem vitae justo interdum, quis
+            aliquam magna malesuada. Morbi aliquet sapien in eros blandit dictum. Sed gravida,
         </article>
 
         <article>
@@ -40,31 +48,35 @@
             efficitur metus euismod vitae. Curabitur sed turpis eget velit laoreet sollicitudin.
             Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
             himenaeos. Vestibulum et metus nibh. Nulla facilisi. Maecenas scelerisque, neque nec
-            lacinia bibendum, ante neque placerat sapien, a sodales dolor tellus in lacus. Nullam
-            sed massa consequat, rutrum erat sed, dignissim nunc. Vestibulum tincidunt eget sem
-            ac tristique. Integer bibendum mollis tristique. Duis facilisis, ante eget aliquam
-            efficitur, massa lorem mattis sem, et sollicitudin tellus felis at lacus.
-        </article>
-
-        <article>
-            Proin vel condimentum odio. Ut a lacus eget augue suscipit efficitur ac at purus.
-            Morbi semper egestas venenatis. Integer aliquet luctus nulla, quis porta ligula
-            efficitur sit amet. Sed vestibulum sapien quam, sit amet volutpat nisl vulputate
-            vitae. Donec nec porta urna. Vestibulum ante ipsum primis in faucibus orci luctus
-            et ultrices posuere cubilia Curae; Curabitur luctus sem vitae justo interdum, quis
-            aliquam magna malesuada. Morbi aliquet sapien in eros blandit dictum. Sed gravida,
-            neque sed facilisis semper, ante urna cursus urna, bibendum elementum ligula magna
-            ac enim. Aliquam venenatis, purus eu eleifend fermentum, quam erat aliquam dolor,
-            in ornare risus dui at libero. Mauris arcu libero, eleifend ac dictum ac, mollis
-            ultricies neque. Nullam ultrices urna justo, vel posuere tellus elementum nec.
-            Fusce vitae scelerisque diam.
+            lacinia bibendum, ante neque placerat sapien
+            <video width="320" height="240" controls>
+                <source src="src/blofvideo.mp4" type="video/mp4">
+            </video>
         </article>
     </section>
+<center>
+    <section class="links">
+        <a href="https://www.topticketshop.nl/blof?gclid=CjwKCAiAob3vBRAUEiwAIbs5ThIcnJvcrZv13zXnErs88-DJPDUuO1uKmOk0mNenlfQC-R-zHOg9GxoCmHYQAvD_BwE"><img src="src/optrede1.jfif" height="125" width="225"></a>
+        <a href="https://www.rang1tickets.nl/blof-tickets?gclid=CjwKCAiAob3vBRAUEiwAIbs5TkAOTtUrr1rNOVVvNVkJKq-WZHQIY_8ZlqeGYtm2PMokk5EdnZvaYRoCG08QAvD_BwE"><img src="src/optrede2.jfif" height="125" width="225"></a>
+        <a href="https://www.blof.nl/"><img src="src/optrede3.jfif"height="125" width="225"></a>
+        <a href="https://www.festivalinfo.nl/artist/1237/Blof/"><img src="src/optrede4.jfif"height="125" width="225"></a>
+    </section>
+</center>
+
 
 </div>
 
 <footer>
-
+    <a href="">Concerten</a>
+    <br>
+    <a href="">Sport</a>
+    <br>
+    <a href="">Recepten</a>
+    <br>
+    <a href="">Contact</a>
+    <br>
+    <br>
+    Copyright &copy; ROC Flevoland 2105
 </footer>
 
 </body>
