--- a/Sport.html
+++ b/Sport.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<link rel="stylesheet" href="NAFootball.css">
     <meta charset="UTF-8">
     <title>Sport Page</title>
+
 </head>
 <body>
+
 <div id="wrapper">
-
-    <header>
-
-    </header>
-
     <nav>
         <a href="">Home</a>
         <a href="">Concerten</a>
@@ -19,22 +16,41 @@
         <a href="">Contact</a>
     </nav>
 
-    <section>
-        <h1>Nieuws uit Almere</h1>
+    <section class="NAVisuals">
+        <a href="google.com">
+            <img src="NAFootball.jpg" width="225" height="175" title="Rugby" alt="Rugby"></a>
+
+        <a href="google.com">
+            <img src="Tennis.jpg" width="225" height="175" title="Tennis" alt="Tennis"></a>
+
+        <a href="google.com">
+            <img src="Voetbal.jpg" width="225" height="175" title="Voetbal" alt="Voetbal"></a>
+
+        <a href="google.com">
+            <img src="Zwemmen.png" width="225" height="175" title="Zwemmen" alt="Zwemmen"></a>
+
+    </section>
+
+    <header>
+
+    </header>
+<section class="sport"> <h1>Sport evenement</h1> </section>
+
+    <section class="NAText">
+
+
         <article>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel mollis tellus, eget
+            tellus, eget Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel mollis
             aliquet nunc. In ac neque lacinia, tempus velit ac, iaculis lorem. Cras dignissim
             mauris sed turpis blandit pharetra. Aenean placerat condimentum ipsum, vel faucibus
             metus fringilla et. Integer eros erat, ultricies sit amet mollis vel, cursus et felis.
             Phasellus a aliquet lacus. Duis neque tortor, imperdiet viverra justo eget, fringilla
-            posuere odio. Curabitur aliquam tristique risus nec ultricies. Maecenas convallis
-            auctor ante, non finibus nunc pharetra in. Phasellus posuere dui quis sagittis
-            vulputate. Maecenas et consequat orci. Duis pellentesque justo id aliquet fermentum.
-            Sed dignissim libero vel augue semper porttitor. Mauris eget nibh ac turpis gravida
-            facilisis. Donec aliquam varius lacinia. Maecenas at bibendum metus.
+            posuere odio.
         </article>
 
-        <article>
+
+
+            <article>
             Vivamus leo metus, fermentum sit amet velit id, tincidunt ullamcorper urna. Mauris
             et libero aliquam, accumsan nulla et, iaculis lectus. Etiam tempus luctus diam, non
             efficitur metus euismod vitae. Curabitur sed turpis eget velit laoreet sollicitudin.
@@ -55,16 +71,39 @@
             aliquam magna malesuada. Morbi aliquet sapien in eros blandit dictum. Sed gravida,
             neque sed facilisis semper, ante urna cursus urna, bibendum elementum ligula magna
             ac enim. Aliquam venenatis, purus eu eleifend fermentum, quam erat aliquam dolor,
-            in ornare risus dui at libero. Mauris arcu libero, eleifend ac dictum ac, mollis
-            ultricies neque. Nullam ultrices urna justo, vel posuere tellus elementum nec.
-            Fusce vitae scelerisque diam.
+            in ornare risus dui at libero.
         </article>
+    </section>
+
+    <section class="NAText1">
+
+        <article>
+            <h1>Contact Infomatie</h1>
+            tellus, eget Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel mollis
+            aliquet nunc. In ac neque lacinia, tempus velit ac, iaculis lorem. Cras dignissim
+            mauris sed turpis blandit pharetra. Aenean placerat condimentum ipsum, vel faucibus
+            metus fringilla et. Integer eros erat, ultricies sit amet mollis vel, cursus et felis.
+            Phasellus a aliquet lacus. Duis neque tortor, imperdiet viverra justo eget, fringilla
+            posuere odio.Integer eros erat, ultricies sit amet mollis vel, cursus et felis.
+            Phasellus a aliquet lacus. Duis neque tortor, imperdiet viverra justo eget, fringilla
+            posuere odio.
+        </article>
+
+
+
     </section>
 
 </div>
 
 <footer>
-
+    <a href="">Over ons</a>
+    <br>
+    <a href="">Produkten</a>
+    <br>
+    <a href="">Contact</a>
+    <br>
+    <br>
+    Copyright © ROC Flevoland 2105
 </footer>
 
 </body>
