verder gegaan met contacten

--- a/Contact.html
+++ b/Contact.html
@@ -15,6 +15,10 @@
         <a href="">Contact</a>
     </nav>
 
+    <section class="google">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1722.450978898016!2d5.2206353058728165!3d52.37198781912242!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c616e17628471b%3A0xac9aa54b1c7288f8!2sgemeente%20Almere!5e0!3m2!1sen!2snl!4v1575987192485!5m2!1sen!2snl" width="600" height="350" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+    </section>
+
     <section>
         <article class="contact">
             <h1>adress gegevens</h1>
@@ -25,8 +29,8 @@
             Phasellus a aliquet lacus. Duis neque tortor, imperdiet viverra justo eget, fringilla
         </article>
     </section>
-
 </div>
+
 
 </body>
 </html>
