--- a/Sport.html
+++ b/Sport.html
@@ -9,25 +9,22 @@
 
 <div id="wrapper">
     <nav>
-        <a href="">Home</a>
-        <a href="">Concerten</a>
-        <a href="">Sport</a>
-        <a href="">Recepten</a>
-        <a href="">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="Concert.html">Concerten</a>
+        <a href="Sport.html">Sport</a>
+        <a href="De ReceptenPagina.html">Recepten</a>
+        <a href="Contact.html">Contact</a>
     </nav>
 
     <section class="NAVisuals">
-        <a href="google.com">
-            <img src="NAFootball.jpg" width="225" height="175" title="Rugby" alt="Rugby"></a>
+        <a href="https://www.rugby.nl/page/het-spel">
+            <img src="img/NAFootball.jpg" width="225" height="175" title="Rugby" alt="Rugby"></a>
 
-        <a href="google.com">
-            <img src="Tennis.jpg" width="225" height="175" title="Tennis" alt="Tennis"></a>
+        <a href="https://www.sport-en-spelen.nl/tennis.html">
+            <img src="img/Tennis.jpg" width="225" height="175" title="Tennis" alt="Tennis"></a>
 
-        <a href="google.com">
-            <img src="Voetbal.jpg" width="225" height="175" title="Voetbal" alt="Voetbal"></a>
-
-        <a href="google.com">
-            <img src="Zwemmen.png" width="225" height="175" title="Zwemmen" alt="Zwemmen"></a>
+        <a href="https://www.sport-en-spelen.nl/voetbal.html">
+            <img src="img/Voetbal.jpg" width="225" height="175" title="Voetbal" alt="Voetbal"></a>
 
     </section>
 
