--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
 <body>
 <div id="wrapper">
 
-    <header>
-
-    </header>
-
     <nav>
         <a href="index.html">Home</a>
         <a href="Concert.html">Concerten</a>
@@ -25,7 +21,7 @@
         <h1 class="title">Nieuws uit Almere</h1>
 
         <article>
-            <img class="article" src="src/aanrijding.jpg" alt="foto aanrijding" width="320">
+            <img class="article" src="img/Almere.jfif" alt="foto aanrijding" width="320">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel mollis tellus, eget
             aliquet nunc. In ac neque lacinia, tempus velit ac, iaculis lorem. Cras dignissim
             mauris sed turpis blandit pharetra. Aenean placerat condimentum ipsum, vel faucibus
@@ -34,14 +30,13 @@
             posuere odio. Curabitur aliquam tristique risus nec ultricies. Maecenas convallis
             auctor ante, non finibus nunc pharetra in. Phasellus posuere dui quis sagittis
             vulputate. Maecenas et consequat orci. Duis pellentesque justo id aliquet fermentum.
-            Sed dignissim libero vel augue semper porttitor. Mauris eget nibh ac turpis gravida
-            facilisis. Donec aliquam varius lacinia. Maecenas at bibendum metus.
+            Sed dignissim libero vel augue semper porttitor.
         </article>
 
         <article>
             Vivamus leo metus, fermentum sit amet velit id, tincidunt ullamcorper urna. Mauris
             et libero aliquam, accumsan nulla et, iaculis lectus. Etiam tempus luctus diam,
-            <img class="article" src="src/hennep.jpg" alt="hennepfoto" width="320">
+            <img class="article" src="img/Bussen.jfif" alt="hennepfoto" width="320">
             non efficitur metus euismod vitae. Curabitur sed turpis eget velit laoreet sollicitudin.
             Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
             himenaeos. Vestibulum et metus nibh. Nulla facilisi. Maecenas scelerisque, neque nec
@@ -60,7 +55,7 @@
             aliquam magna malesuada. Morbi aliquet sapien in eros blandit dictum. Sed gravida,
             neque sed facilisis semper, ante urna cursus urna, bibendum elementum ligula magna
             ac enim. Aliquam venenatis, purus eu eleifend fermentum, quam erat aliquam dolor,
-            <img class="article" src="src/stage.jpg" alt="hennepfoto" width="320">
+            <img class="article" src="img/Politie.jfif" alt="hennepfoto" width="320">
         </article>
     </section>
 
