--- a/De ReceptenPagina.html
+++ b/De ReceptenPagina.html
@@ -16,7 +16,7 @@
         <a href="Contact.html">Contact</a>
     </nav>
 
-    <img class="gerecht" src="src/boerenkool.jpg" alt="foto boerenkool">
+    <img class="gerecht" src="img/stampot.jpg" alt="foto boerenkool" height="350" width="350">
 
     <section class="recepten">
         <h1>Boerenkool met worst</h1>
@@ -36,13 +36,13 @@
 
     <div class="row">
         <div class="column">
-            <img src="src/boerenkool2.jfif" alt="Snow" width="300" height="300">
+            <img src="img/rookworst.jpg" alt="Snow" width="300" height="300">
         </div>
         <div class="column">
-            <img src="src/boerenkool3.jfif" alt="Forest" width="300" height="300">
+            <img src="img/speklapjes.jpg" alt="Forest" width="300" height="300">
         </div>
         <div class="column">
-            <img src="src/boerenkool4.jfif" alt="Mountains" width="300" height="300">
+            <img src="img/spekjes.jpg" alt="Mountains" width="300" height="300">
         </div>
     </div>
 
