alleeen contact nog

--- a/Overons.html
+++ b/Overons.html
@@ -17,51 +17,48 @@
         <a href="Overons.html">Overons</a>
     </nav>
 
-    <section>
-        <h1>Nieuws uit Almere</h1>
-        <article>
+        <h1>Pagina Overons </h1>
+    <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel mollis tellus, eget
             aliquet nunc. In ac neque lacinia, tempus velit ac, iaculis lorem. Cras dignissim
             mauris sed turpis blandit pharetra. Aenean placerat condimentum ipsum, vel faucibus
             metus fringilla et. Integer eros erat, ultricies sit amet mollis vel, cursus et felis.
             Phasellus a aliquet lacus. Duis neque tortor, imperdiet viverra justo eget, fringilla
-            posuere odio. Curabitur aliquam tristique risus nec ultricies. Maecenas convallis
-            auctor ante, non finibus nunc pharetra in. Phasellus posuere dui quis sagittis
-            vulputate. Maecenas et consequat orci. Duis pellentesque justo id aliquet fermentum.
-            Sed dignissim libero vel augue semper porttitor. Mauris eget nibh ac turpis gravida
-            facilisis. Donec aliquam varius lacinia. Maecenas at bibendum metus.
-        </article>
+    </p>
 
-        <article>
-            Vivamus leo metus, fermentum sit amet velit id, tincidunt ullamcorper urna. Mauris
-            et libero aliquam, accumsan nulla et, iaculis lectus. Etiam tempus luctus diam, non
-            efficitur metus euismod vitae. Curabitur sed turpis eget velit laoreet sollicitudin.
-            Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
-            himenaeos. Vestibulum et metus nibh. Nulla facilisi. Maecenas scelerisque, neque nec
-            lacinia bibendum, ante neque placerat sapien, a sodales dolor tellus in lacus. Nullam
-            sed massa consequat, rutrum erat sed, dignissim nunc. Vestibulum tincidunt eget sem
-            ac tristique. Integer bibendum mollis tristique. Duis facilisis, ante eget aliquam
-            efficitur, massa lorem mattis sem, et sollicitudin tellus felis at lacus.
-        </article>
+    <div>
+        ​<span></span>
+        <img src="img/schattigaapje.jpg"height="300" width="300">
+        <span>Mijn naam is Jozua en ik heb dit project samen gemaakt met Rogier, het werken met hem was wel leuk ik kan normaal niet
+        echt samen werken met mensen maar met hem kan het wel, ik ben best wel een langzaame werker maar dat maakt hem niet echt uit.
+        De website dat we samen moesten maken was wel leuk sinds ik niet echt veel weet over html en csss maar Rogier wel heeft me ook
+        een paar dingen kunnen leren dus van dit project heb ik wel veel kunnen leren over hoe css werkt </span>
+    </div>
 
-        <article>
-            Proin vel condimentum odio. Ut a lacus eget augue suscipit efficitur ac at purus.
-            Morbi semper egestas venenatis. Integer aliquet luctus nulla, quis porta ligula
-            efficitur sit amet. Sed vestibulum sapien quam, sit amet volutpat nisl vulputate
-            vitae. Donec nec porta urna. Vestibulum ante ipsum primis in faucibus orci luctus
-            et ultrices posuere cubilia Curae; Curabitur luctus sem vitae justo interdum, quis
-            aliquam magna malesuada. Morbi aliquet sapien in eros blandit dictum. Sed gravida,
-            neque sed facilisis semper, ante urna cursus urna, bibendum elementum ligula magna
-            ac enim. Aliquam venenatis, purus eu eleifend fermentum, quam erat aliquam dolor,
-            in ornare risus dui at libero. Mauris arcu libero, eleifend ac dictum ac, mollis
-            ultricies neque. Nullam ultrices urna justo, vel posuere tellus elementum nec.
-            Fusce vitae scelerisque diam.
-        </article>
-    </section>
+    <div class="tweederij">
+        ​<span></span>
+        <img src="img/grumpycat.jfif"width="300" height="300">
+        <span>hierbij type ik iets over get project. het was een interesant project ook om te zien wat je wel en niet kan
+        en wat je nog moet leren maar ook hoe het samen werken verloopt en wat iedereen doet en hoeveel inzet iedereen heeft.
+        ik ben tevreden hoe het is gegaan en wat het eind resultaat is.</span>
+    </div>
+
 
 </div>
 
 <footer>
+    <a href="index.html">Home</a>
+    <br>
+    <a href="">Concerten</a>
+    <br>
+    <a href="">Sport</a>
+    <br>
+    <a href="">Recepten</a>
+    <br>
+    <a href="">Contact</a>
+    <br>
+    <br>
+    Copyright &copy; ROC Flevoland 2105
 
 </footer>
 
