Sport an contact

--- a/Sport.html
+++ b/Sport.html
@@ -17,13 +17,13 @@
     </nav>
 
     <section class="NAVisuals">
-        <a href="https://www.rugby.nl/page/het-spel">
+        <a href="Sport1.html">
             <img src="img/NAFootball.jpg" width="225" height="175" title="Rugby" alt="Rugby"></a>
 
-        <a href="https://www.sport-en-spelen.nl/tennis.html">
+        <a href="Sport2.html">
             <img src="img/Tennis.jpg" width="225" height="175" title="Tennis" alt="Tennis"></a>
 
-        <a href="https://www.sport-en-spelen.nl/voetbal.html">
+        <a href="Sport3.html">
             <img src="img/Voetbal.jpg" width="225" height="175" title="Voetbal" alt="Voetbal"></a>
 
     </section>
