--- a/Overons.html
+++ b/Overons.html
@@ -38,7 +38,7 @@
     <div class="tweederij">
         ​<span></span>
         <img src="img/grumpycat.jfif"width="300" height="300">
-        <span>hierbij type ik iets over get project. het was een interesant project ook om te zien wat je wel en niet kan
+        <span>mijn naam is Rogier en ik heb dit project gemaakt met Jozua. hierbij type ik iets over get project. het was een interesant project ook om te zien wat je wel en niet kan
         en wat je nog moet leren maar ook hoe het samen werken verloopt en wat iedereen doet en hoeveel inzet iedereen heeft.
         ik ben tevreden hoe het is gegaan en wat het eind resultaat is.</span>
     </div>
