--- a/Contact.html
+++ b/Contact.html
@@ -34,7 +34,7 @@
 
            <article class="form">
 
-               <form action="/action_page.php">
+               <form>
             First name:<br>
             <input type="text" name="firstname" value=" ">
             <br>
@@ -45,7 +45,7 @@
             <textarea name="message" rows=5" cols="15">
             </textarea>
             <br>
-            <input type="submit" value="Submit">
+                   <button type="submit" formaction="https://www.twitchquotes.com/emoticons/Jebaited">Submit</button>
                 </form>
 
         </article>
