--- a/Html/De ReceptenPagina.html
+++ b/Html/De ReceptenPagina.html
@@ -17,37 +17,33 @@
         <a href="Overons.html">Overons</a>
     </nav>
 
-    <img class="gerecht" src="img/recepten.jpg" alt="foto boerenkool" height="350" width="350">
+    <img class="gerecht" src="../img/stampot.jpg" alt="foto boerenkool" height="350" width="350">
 
     <section class="recepten">
-        <h1>recepten</h1>
-        <h4>1. rendang</h4>
+        <h1>Boerenkool met worst</h1>
+        <h4>Recept</h4>
         <article class="recepten">
             is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
         </article>
-        <h4>2. stampot</h4>
+        <h4>ingerdiente</h4>
         <article class="recepten">
             is simply dummy text of the printing and typesetting industry
         </article>
-        <h4>3. KIP</h4>
+        <h4>Bereidingswijze</h4>
         <article class="recepten">
             is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
         </article>
     </section>
 
-
     <div class="row">
         <div class="column">
-            <a href="rendang.html">
-                <img src="img/rendang.jpg" width="300" height="300" title="Rugby" alt="Rugby"></a>
+            <img src="../img/stamptopingr.jfif" alt="Snow" width="300" height="300">
         </div>
         <div class="column">
-            <a href="De%20ReceptenPagina.html">
-                <img src="img/stampot.jpg" width="300" height="300" title="Rugby" alt="Rugby"></a>
+            <img src="../img/koolindepan.jpeg" alt="Forest" width="300" height="300">
         </div>
         <div class="column">
-            <a href="kip.html">
-                <img src="img/KIP.jpg" width="300" height="300" title="Rugby" alt="Rugby"></a>
+            <img src="../img/koolklaar.jpg" alt="Mountains" width="300" height="300">
         </div>
     </div>
 
