--- a/Html/Sport.html
+++ b/Html/Sport.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<link rel="stylesheet" href="NAFootball.css">
     <meta charset="UTF-8">
-    <title>BierHier Hoooome Pagina</title>
-    <link rel="stylesheet" href="Bierhier.css">
+    <title>Sport Page</title>
+
 </head>
 <body>
-<div id="wrapper">
 
+<div id="wrapper">
     <nav>
         <a href="index.html">Home</a>
         <a href="concertfront.html">Concerten</a>
@@ -17,28 +17,41 @@
         <a href="Overons.html">Overons</a>
     </nav>
 
-    <section>
-        <h1 class="Stage">Stage lopen in Almere</h1>
-        <h1 class="title">Nieuws uit Almere</h1>
+    <section class="NAVisuals">
+        <a href="Sport1.html">
+            <img src="../img/NAFootball.jpg" width="225" height="175" title="Rugby" alt="Rugby"></a>
+
+        <a href="Sport2.html">
+            <img src="../img/Tennis.jpg" width="225" height="175" title="Tennis" alt="Tennis"></a>
+
+        <a href="Sport3.html">
+            <img src="../img/Voetbal.jpg" width="225" height="175" title="Voetbal" alt="Voetbal"></a>
+
+    </section>
+
+    <header>
+
+    </header>
+<section class="sport"> <h1>Sport evenement</h1> </section>
+
+    <section class="NAText">
+
 
         <article>
-            <img class="article" src="img/Almere.jfif" alt="foto aanrijding" width="320">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel mollis tellus, eget
+            tellus, eget Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel mollis
             aliquet nunc. In ac neque lacinia, tempus velit ac, iaculis lorem. Cras dignissim
             mauris sed turpis blandit pharetra. Aenean placerat condimentum ipsum, vel faucibus
             metus fringilla et. Integer eros erat, ultricies sit amet mollis vel, cursus et felis.
             Phasellus a aliquet lacus. Duis neque tortor, imperdiet viverra justo eget, fringilla
-            posuere odio. Curabitur aliquam tristique risus nec ultricies. Maecenas convallis
-            auctor ante, non finibus nunc pharetra in. Phasellus posuere dui quis sagittis
-            vulputate. Maecenas et consequat orci. Duis pellentesque justo id aliquet fermentum.
-            Sed dignissim libero vel augue semper porttitor.
+            posuere odio.
         </article>
 
-        <article>
+
+
+            <article>
             Vivamus leo metus, fermentum sit amet velit id, tincidunt ullamcorper urna. Mauris
-            et libero aliquam, accumsan nulla et, iaculis lectus. Etiam tempus luctus diam,
-            <img class="article" src="img/Bussen.jfif" alt="hennepfoto" width="320">
-            non efficitur metus euismod vitae. Curabitur sed turpis eget velit laoreet sollicitudin.
+            et libero aliquam, accumsan nulla et, iaculis lectus. Etiam tempus luctus diam, non
+            efficitur metus euismod vitae. Curabitur sed turpis eget velit laoreet sollicitudin.
             Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
             himenaeos. Vestibulum et metus nibh. Nulla facilisi. Maecenas scelerisque, neque nec
             lacinia bibendum, ante neque placerat sapien, a sodales dolor tellus in lacus. Nullam
@@ -47,7 +60,7 @@
             efficitur, massa lorem mattis sem, et sollicitudin tellus felis at lacus.
         </article>
 
-        <article class="laatste">
+        <article>
             Proin vel condimentum odio. Ut a lacus eget augue suscipit efficitur ac at purus.
             Morbi semper egestas venenatis. Integer aliquet luctus nulla, quis porta ligula
             efficitur sit amet. Sed vestibulum sapien quam, sit amet volutpat nisl vulputate
@@ -56,23 +69,39 @@
             aliquam magna malesuada. Morbi aliquet sapien in eros blandit dictum. Sed gravida,
             neque sed facilisis semper, ante urna cursus urna, bibendum elementum ligula magna
             ac enim. Aliquam venenatis, purus eu eleifend fermentum, quam erat aliquam dolor,
-            <img class="article" src="img/Politie.jfif" alt="hennepfoto" width="320">
+            in ornare risus dui at libero.
         </article>
+    </section>
+
+    <section class="NAText1">
+
+        <article>
+            <h1>Contact Infomatie</h1>
+            tellus, eget Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel mollis
+            aliquet nunc. In ac neque lacinia, tempus velit ac, iaculis lorem. Cras dignissim
+            mauris sed turpis blandit pharetra. Aenean placerat condimentum ipsum, vel faucibus
+            metus fringilla et. Integer eros erat, ultricies sit amet mollis vel, cursus et felis.
+            Phasellus a aliquet lacus. Duis neque tortor, imperdiet viverra justo eget, fringilla
+            posuere odio.Integer eros erat, ultricies sit amet mollis vel, cursus et felis.
+            Phasellus a aliquet lacus. Duis neque tortor, imperdiet viverra justo eget, fringilla
+            posuere odio.
+        </article>
+
+
+
     </section>
 
 </div>
 
 <footer>
-    <a href="">Concerten</a>
+    <a href="">Over ons</a>
     <br>
-    <a href="">Sport</a>
-    <br>
-    <a href="">Recepten</a>
+    <a href="">Produkten</a>
     <br>
     <a href="">Contact</a>
     <br>
     <br>
-    Copyright &copy; ROC Flevoland 2105
+    Copyright © ROC Flevoland 2105
 </footer>
 
 </body>
