--- a/Html/recepten.html
+++ b/Html/recepten.html
@@ -17,33 +17,37 @@
         <a href="Overons.html">Overons</a>
     </nav>
 
-    <img class="gerecht" src="img/rendang.jpg" alt="foto boerenkool" height="350" width="350">
+    <img class="gerecht" src="../img/recepten.jpg" alt="foto boerenkool" height="350" width="350">
 
     <section class="recepten">
-        <h1>Boerenkool met worst</h1>
-        <h4>Recept</h4>
+        <h1>recepten</h1>
+        <h4>1. rendang</h4>
         <article class="recepten">
             is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
         </article>
-        <h4>ingerdiente</h4>
+        <h4>2. stampot</h4>
         <article class="recepten">
             is simply dummy text of the printing and typesetting industry
         </article>
-        <h4>Bereidingswijze</h4>
+        <h4>3. KIP</h4>
         <article class="recepten">
             is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
         </article>
     </section>
 
+
     <div class="row">
         <div class="column">
-            <img src="img/rendanging.jpg" alt="Snow" width="300" height="300">
+            <a href="rendang.html">
+                <img src="../img/rendang.jpg" width="300" height="300" title="Rugby" alt="Rugby"></a>
         </div>
         <div class="column">
-            <img src="img/rendangpan.jpg" alt="Forest" width="300" height="300">
+            <a href="De%20ReceptenPagina.html">
+                <img src="../img/stampot.jpg" width="300" height="300" title="Rugby" alt="Rugby"></a>
         </div>
         <div class="column">
-            <img src="img/rendangklaar.jpg" alt="Mountains" width="300" height="300">
+            <a href="kip.html">
+                <img src="../img/KIP.jpg" width="300" height="300" title="Rugby" alt="Rugby"></a>
         </div>
     </div>
 
